DesignProject/tests/pass/test08.src
// read and write operations
func readAndWrite() -> void {
    local value : integer;
    read(value);
    write(value);
    value := value + 1;
    write(value);
}

