DesignProject/tests/error/test04.src
// type mismatch
func process() -> void {
    local x : integer;
    local y : float;
    x := 10;
    y := 5.5;
    x := y;
    write(x);
}



